<resources>
    <string name="app_name">MenuSelect</string>

    <string name="status">Good</string>
    <string name="username">admin</string>


    <string name="textViewUsername">Username</string>
    <string name="textViewPassword">Password</string>
    <string name="editTextUsername">ID</string>
    <string name="editTextPassword">********</string>
    <string name="buttonSignIn">Sign In</string>
    <string name="imageViewLogo">Dynasty House Seafood Restaurant Logo</string>

    <string name="buttonOrder">Order</string>
    <string name="buttonMenu">Menu</string>
    <string name="buttonSettings">Settings</string>


    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnCancel">Cl</string>
    <string name="btnBackspace">Bk</string>
    <string name="statusTag">Status:</string>
    <string name="loggedInTag">Logged in as:</string>
    <string name="btnPrint">Print</string>
    <string name="go">Go</string>

</resources>
